--- a/index.html
+++ b/index.html
@@ -2,35 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Article preview component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Article preview component</title>
 </head>
 <body>
-
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
-  
+  <main class="component">
+    <div class="image">
+      
+    </div>
+    <div class="text">
+      <h1>
+      Shift the overall look and feel by adding these wonderful 
+      touches to furniture in your home
+      </h1>
+      Ever been in a room and felt like something was missing? Perhaps 
+      it felt slightly bare and uninviting. I’ve got some simple tips 
+      to help you make any room feel complete.
+      <div class="social">
+        <div class="author">
+          <img src="images/avatar-michelle.jpg" alt="avatar-michelle" class="avatar">
+          <div class="name">
+            <b>Michelle Appleton</b><br>
+            28 Jun 2020
+          </div>
+        </div>
+        <a href="#" class="share">
+          <img src="images/icon-share.svg" alt="share" id="arrow">
+        </a>
+    </div>
+    </div>
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">art</a>.
   </div>
 </body>
 </html>
