Added social media pop-up

--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
             28 Jun 2020
           </div>
         </div>
-        <a href="#" class="share">
-          <img src="images/icon-share.svg" alt="share" id="arrow">
-        </a>
+        <div class="share">
+          <a href="#" class="share-btn">
+            <img src="images/icon-share.svg" alt="share" id="arrow">
+          </a>
+          <div class="share-popup">
+            SHARE icons
+          </div>
+        </div>
     </div>
     </div>
   </main>
