Added social media icons

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
             <img src="images/icon-share.svg" alt="share" id="arrow">
           </a>
           <div class="share-popup">
-            SHARE icons
+            SHARE 
+            <img src="images/icon-facebook.svg" alt="facebook">
+            <img src="images/icon-twitter.svg" alt="twitter">
+            <img src="images/icon-pinterest.svg" alt="pinterest">
           </div>
         </div>
     </div>
