Added media query

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <main class="component">
     <div class="image">
-      
+
     </div>
     <div class="text">
       <h1>
@@ -34,9 +34,12 @@
           </a>
           <div class="share-popup">
             SHARE 
-            <img src="images/icon-facebook.svg" alt="facebook">
-            <img src="images/icon-twitter.svg" alt="twitter">
-            <img src="images/icon-pinterest.svg" alt="pinterest">
+            <a href="#">
+            <img src="images/icon-facebook.svg" alt="facebook"></a>
+            <a href="#">
+            <img src="images/icon-twitter.svg" alt="twitter"></a>
+            <a href="#">
+            <img src="images/icon-pinterest.svg" alt="pinterest"></a>
           </div>
         </div>
     </div>
